src/view/styles.css
:root {
  --primary-color: rgb(72, 129, 194);
  --primary-color-higlight: rgb(105, 155, 212);
  --primary-text-color: rgba(255, 255, 255, 0.87);
  --select-border: #393939;
  --select-focus: #101484;
  --select-arrow: var(--select-border);
}

.hidden {
  display: none;
}
button {
  border: none;
  padding: 0.5rem;
  background-color: var(--primary-color);
  color: var(--primary-text-color);
}

input[type=text] {
  padding: 0.5rem;
  border: none;
  border-color: var(--primary-color);
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

button:hover {
  background-color: var(--primary-color-higlight);
  cursor: pointer;
}
.multiselect__dropdown {
  position: relative;
  z-index: 2;
}

.tag-container {
  display: flex;
  flex-direction: row;
  gap: 0.3rem;
}

.tag {
  padding: 0.3rem;
  background-color: var(--primary-color);
  color: var(--primary-text-color);
  text-align: center;
  display: inline-flex;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

